--- a/src/03_feature_engineering.ipynb
+++ b/src/03_feature_engineering.ipynb
@@ -12,7 +12,7 @@
             "cell_type": "markdown",
             "metadata": {},
             "source": [
-                "#### 5.2 Feature engineering"
+                "#### Feature engineering"
             ]
         },
         {
